Update and rename form.html to gamess_form.html

--- a/templates/gamess_form.html
+++ b/templates/gamess_form.html
@@ -118,7 +118,7 @@
     </style>
 </head>
 <body>
-    <h1>Input File Generator</h1>
+    <h1>Input File Generator for GAMESS</h1>
     <form action="/process" method="post" enctype="multipart/form-data">
         <label for="scftyp">SCFTYP:</label>
         <select name="scftyp" id="scftyp" required>
