--- a/templates/gamess_form.html
+++ b/templates/gamess_form.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <h1>Input File Generator for GAMESS</h1>
-    <form action="/process" method="post" enctype="multipart/form-data">
+    <form action="/process_gamess" method="post" enctype="multipart/form-data">
         <label for="scftyp">SCFTYP:</label>
         <select name="scftyp" id="scftyp" required>
             <option value="RHF">RHF</option>
