--- a/templates/entry.html
+++ b/templates/entry.html
@@ -49,8 +49,8 @@
     <div class="container">
         <h1>Choose Computational Software</h1>
         <p>Select the software you'd like to use:</p>
-        <a href="/gamess" class="button gamess">GAMESS</a>
-        <a href="/psi4" class="button psi4">Psi4</a>
+        <a href="/forms?type=gamess" class="button gamess">GAMESS</a>
+        <a href="/forms?type=psi4" class="button psi4">Psi4</a>
     </div>
 </body>
 </html>
