--- a/templates/file.html
+++ b/templates/file.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     {% if mode == 'input' %}
-        <div class="container">
+        <div class="container2">
             <h1>Upload a File to Generate Output for {{ naam }}</h1>
             <form action="/file" method="post" enctype="multipart/form-data">
                 <div class="form-group">
