--- a/templates/entry.html
+++ b/templates/entry.html
@@ -13,12 +13,12 @@
         <a href="/forms?type=gamess" class="button gamess">GAMESS</a>
         <a href="/forms?type=psi4" class="button psi4">Psi4</a>
     </div>
-    <div class="container">
+    <!--<div class="container">
         <h1>Upload a File</h1>
         <p>Choose the software you would like to use:</p>
         <a href="/forms?type=fgamess" class="file button gamess">GAMESS</a>
         <a href="/forms?type=fpsi4" class="file button psi4">Psi4</a>
-    </div>
+    </div>-->
 </body>
 </html>
 
